<resources>
    <string name="app_name">ComunicaNews</string>
    <string name="e_mail">E-mail</string>
    <string name="senha">Senha</string>
    <string name="comunica_news">Comunica News</string>
    <string name="login">Login</string>
    <string name="n_possui_conta">Não possui conta?</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="esqueci_a_senha">Esqueci a senha</string>
    <string name="confirmar_senha">Confirmar Senha</string>
    <string name="nome">Nome</string>
    <string name="telefone">Telefone</string>
    <string name="texto_recuperar_senha">Informe seu e-mail que enviaremos \num link para alteração de senha</string>
    <string name="criar_conta">Criar Conta</string>
    <string name="recuperar_senha">Recuperar senha</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pesquisar">Pesquisar</string>
    <string name="posts_mais_recentes">Posts Mais Recentes</string>
    <string name="posts">Posts</string>
    <string name="pedidos">Pedidos</string>
    <string name="eventos">Eventos</string>
    <string name="titulo">Título</string>
    <string name="salvar">Salvar</string>
    <string name="descricao">Descrição</string>
    <string name="nao_logado">Você não está logado na sua conta, faça o login para poder acessar o app</string>
</resources>