<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.activity.auth.CriarContaActivity">

    <include
        android:id="@+id/toolbar_voltar"
        layout="@layout/toolbar_voltar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_voltar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="32dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/nome"
                android:textColorHint="@color/text_input_box_stroke"
                app:boxBackgroundColor="@color/white"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                app:boxStrokeColor="@color/text_input_box_stroke"
                app:hintTextColor="@color/text_input_box_stroke">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_nome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_person"
                    android:drawablePadding="8dp"
                    android:inputType="textEmailAddress"
                    android:padding="16dp"
                    android:textColor="@color/verdigris"
                    android:textSize="20sp"
                    app:drawableTint="@color/text_input_box_stroke" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/e_mail"
                android:textColorHint="@color/text_input_box_stroke"
                app:boxBackgroundColor="@color/white"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                app:boxStrokeColor="@color/text_input_box_stroke"
                app:hintTextColor="@color/text_input_box_stroke">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_email"
                    android:drawablePadding="8dp"
                    android:inputType="textEmailAddress"
                    android:padding="16dp"
                    android:textColor="@color/verdigris"
                    android:textSize="20sp"
                    app:drawableTint="@color/text_input_box_stroke" />

                <com.google.android.material.textfield.TextInputLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:hint="@string/telefone"
                    android:textColorHint="@color/text_input_box_stroke"
                    app:boxBackgroundColor="@color/white"
                    app:boxCornerRadiusBottomEnd="10dp"
                    app:boxCornerRadiusBottomStart="10dp"
                    app:boxCornerRadiusTopEnd="10dp"
                    app:boxCornerRadiusTopStart="10dp"
                    app:boxStrokeColor="@color/text_input_box_stroke"
                    app:hintTextColor="@color/text_input_box_stroke">

                    <com.santalu.maskara.widget.MaskEditText
                        android:id="@+id/edt_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_phone"
                        android:drawablePadding="8dp"
                        android:inputType="number"
                        android:padding="16dp"
                        android:textColor="@color/verdigris"
                        android:textSize="20sp"
                        app:drawableTint="@color/text_input_box_stroke"
                        app:mask="(__) _____ ____"
                        app:maskCharacter="_"
                        app:maskStyle="completable" />
                </com.google.android.material.textfield.TextInputLayout>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/senha"
                android:textColorHint="@color/text_input_box_stroke"
                app:boxBackgroundColor="@color/white"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                app:boxStrokeColor="@color/text_input_box_stroke"
                app:hintTextColor="@color/text_input_box_stroke">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_senha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_key"
                    android:drawablePadding="8dp"
                    android:inputType="textPassword"
                    android:padding="16dp"
                    android:textColor="@color/verdigris"
                    android:textSize="20sp"
                    app:drawableTint="@color/text_input_box_stroke" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/confirmar_senha"
                android:textColorHint="@color/text_input_box_stroke"
                app:boxBackgroundColor="@color/white"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                app:boxStrokeColor="@color/text_input_box_stroke"
                app:hintTextColor="@color/text_input_box_stroke">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_senha_confirmar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_key"
                    android:drawablePadding="8dp"
                    android:inputType="textPassword"
                    android:padding="16dp"
                    android:textColor="@color/verdigris"
                    android:textSize="20sp"
                    app:drawableTint="@color/text_input_box_stroke" />
            </com.google.android.material.textfield.TextInputLayout>

            <ProgressBar
                android:id="@+id/progress_circular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="32dp"
                android:indeterminateTint="@color/esmerald"
                android:visibility="gone"
                tools:visibility="visible" />

            <android.widget.Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:background="@drawable/btn_press_esmerald"
                android:paddingVertical="16dp"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:textStyle="bold" />


        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>